Update package.json, package-lock.json, and README.md to enhance logging capabilities and add examples for Express server integration

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,8 @@
   },
   "include": [
     "src/**/*",
-    "scripts/**/*"
+    "scripts/**/*",
+    "examples/**/*"
   ],
   "exclude": [
     "node_modules",
