--- a/package.json
+++ b/package.json
@@ -35,12 +35,18 @@
   "author": "Ali Şahin",
   "license": "MIT",
   "devDependencies": {
+    "@types/body-parser": "^1.19.5",
+    "@types/express": "^5.0.1",
+    "@types/express-ejs-layouts": "^2.5.4",
     "@types/jest": "^29.5.11",
     "@types/node": "^20.10.5",
     "@types/yargs": "^17.0.32",
     "@typescript-eslint/eslint-plugin": "^6.15.0",
     "@typescript-eslint/parser": "^6.15.0",
+    "ejs": "^3.1.10",
     "eslint": "^8.56.0",
+    "express": "^5.1.0",
+    "express-ejs-layouts": "^2.5.1",
     "jest": "^29.7.0",
     "rimraf": "^5.0.5",
     "ts-jest": "^29.1.1",
@@ -58,10 +64,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/username/logme.git"
+    "url": "https://github.com/alisahindev/logme.git"
   },
   "bugs": {
-    "url": "https://github.com/username/logme/issues"
+    "url": "https://github.com/alisahindev/logme/issues"
   },
-  "homepage": "https://github.com/username/logme#readme"
+  "homepage": "https://github.com/alisahindev/logme#readme"
 }
