Add ESLint ignore file, improve error handling in install-local.js, and introduce client component example for fetch logging

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,8 @@
     "forceConsistentCasingInFileNames": true,
     "lib": ["DOM", "ES2020"],
     "moduleResolution": "node",
-    "isolatedModules": true
+    "isolatedModules": true,
+    "rootDir": "./"
   },
   "include": [
     "src/**/*",
